--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header {
     background: #333;
     color: #fff;
     padding: 1em 0;
-    text-align: center;
+    text-align: left;
 }
 
 nav ul {
