--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ footer {
 .portfolio-gallery img {
     flex: 1 1 calc(33.333% - 40px); /* Each image will take up one-third of the row, minus spacing */
     max-width: calc(33.333% - 40px);
+    min-width: 400px
     height: auto;
     display: block;
 }
